<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.quiz_app.Instructions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90CAF9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/general_instruction"
                android:textColor="#000000"
                android:textSize="@dimen/HeadingSize"
                android:textStyle="italic|bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/guid1" />

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/quid2" />

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/quid3" />

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/quid4" />

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/guid5" />

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/guid6" />

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/guid7" />

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/guid8" />

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/guid10" />

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/quide11"/>

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/quide12"/>

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/quide13"/>

            <TextView
                android:textSize="@dimen/DefaultTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin"
                android:text="@string/guide14"/>

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/ButtonColor"
                android:layout_margin="15dp"
                android:layout_gravity ="center"
                android:text="@string/start_test" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>