<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/que_num_10"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/NormalMargin"
                android:text="@string/Q10"
                android:textColor="#000000"
                android:textSize="21sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginEnd="@dimen/NormalMargin"
            android:layout_weight="1.5">

            <RadioButton
                android:id="@+id/fourradio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ten_opt_1" />


            <RadioButton
                android:id="@+id/fourradio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/correct10" />

            <RadioButton
                android:id="@+id/fourradio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ten_opt_3" />

            <RadioButton
                android:id="@+id/fourradio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ten_opt_4" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/C10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="40dp"
                android:text="@string/correct_ans_disp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/correct10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:text="" />

        </LinearLayout>

        <TextView
            android:id="@+id/ans10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/NormalMargin"
            android:layout_marginStart="40dp"
            android:text=""
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:visibility="gone" />

    </LinearLayout>

</android.support.v7.widget.CardView>