<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Title"
            android:layout_margin="16dp"
            android:textSize="38sp"
            android:textColor="#000000"
            android:textStyle="bold|italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_margin="64dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_name"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:translationX="20dp"
                    android:hint="@string/name_example" />


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_email_address"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:translationX="20dp"
                    android:hint="@string/email_example" />


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:text="@string/next"
            android:textColor="#000000"
            android:background="#4CAF50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="58dp"/>

    </RelativeLayout>
   
</android.support.constraint.ConstraintLayout>