<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headerLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/toolbarbackground">

                    <ImageView
                        android:id="@+id/playpause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="40dp"
                        android:layout_toStartOf="@id/timer"
                        android:contentDescription="@string/play_and_pause_time"
                        android:src="@drawable/ic_play_arrow_black_36dp" />

                    <TextView
                        android:id="@+id/timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/time"
                        android:textColor="#000000"
                        android:textSize="54sp"
                        android:textStyle="italic|bold" />

                    <ImageView
                        android:id="@+id/done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:layout_toEndOf="@id/timer"
                        android:contentDescription="@string/done"
                        android:src="@drawable/ic_done_black_36dp" />

                </RelativeLayout>

            </android.support.design.widget.AppBarLayout>

        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>

    <include
        layout="@layout/quizlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>